# workpad

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  TEST_PLAN.md  docker-compose.yml  pyproject.toml  verify_foundation.py  verify_service_layer.py
doc/: API_LAYER.md  ARCHITECTURE.md  ARCHITECTURE_MICROSERVICES_AS_LIBRARIES.md  DEPLOYMENT.md  FOUNDATION_LAYER.md  MCP_WRAPPER_STRATEGY.md  SERVICE_LAYER.md  SQLITE_STORAGE.md  Workpad-Document-Implementation-Complet.md  copilot-sdk.md  documentation_libs.md
example_data/: workpad.db
examples/: api_client.py  basic_usage.py  test_interactive.py  test_sqlite.py
tests/: conftest.py  test_api.py  test_models.py  test_service.py  test_sqlite_storage.py  test_storage.py
workpad/: __init__.py  config.py  enums.py  errors.py  models.py  service.py  service_draft.py  utils.py
workpad/api/: __init__.py  errors.py  routes.py
workpad/storage/: base.py  json_storage.py  sqlite_storage.py
