[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workpad"
version = "0.1.0"
description = "Generic note/entry management system"
readme = "README.md"
authors = [
    { name = "Workpad Team", email = "team@workpad.dev" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["notes", "logging", "research", "journal", "mcp"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/workpad/workpad"
"Bug Tracker" = "https://github.com/workpad/workpad/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["workpad*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
